--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ openai = "1.1.0"
 futures = "0.3.31"
 chrono = {version = "0.4.38", features = ["serde"]}
 rand = "0.9.1"
+
+[lib]
+path = "src/lib.rs"
