--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ image = "0.25.6"
 html_parser = "0.7.0"
 openai = "1.1.0"
 chrono = {version = "0.4.38", features = ["serde"]}
-rand = "0.9.1"
+rand = {version = "0.9.1", features = ["wasm_js"]}
 
 [lib]
 path = "src/lib.rs"
+
+[target.wasm32-unknown-unknown]
+rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
