--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ image = "0.25.6"
 html_parser = "0.7.0"
 openai = "1.1.0"
 chrono = {version = "0.4.38", features = ["serde"]}
-rand = {version = "0.9.1", features = ["wasm_js"]}
+rand = "0.9.1"
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 
 [lib]
 path = "src/lib.rs"
