--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ image = "0.25.6"
 html_parser = "0.7.0"
 chrono = {version = "0.4.38", features = ["serde"]}
 rand = "0.9.1"
-getrandom = { version = "0.3.3", features = ["wasm_js", "web_js"] }
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 
 [lib]
 path = "src/lib.rs"
