--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ chrono = {version = "0.4.38", features = ["serde"]}
 rand = "0.9.1"
 getrandom = { version = "0.3.3", features = ["wasm_js"] }
 whoami = "1.6.0"
+string_calculator = "0.4.0"
 
 [lib]
 path = "src/lib.rs"
