--- a/proxima_backend_server/Cargo.toml
+++ b/proxima_backend_server/Cargo.toml
@@ -10,3 +10,4 @@ openai = "1.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3.31"
+reqwest-streams = "0.10.0"
