--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ getrandom = { version = "0.3.3", features = ["wasm_js"] }
 whoami = "1.6.0"
 string_calculator = "0.4.0"
 
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+reqwest = { version = "0.11.27", features = ["json"] }
+duckduckgo = "0.2.0"
+
 [lib]
 path = "src/lib.rs"
 
