mostly fixed python tool calls (decoding is broken and the container has internet access which is wildly unsafe)

--- a/python_tool_executor/Dockerfile
+++ b/python_tool_executor/Dockerfile
@@ -14,4 +14,4 @@ RUN cargo build --release
 
 EXPOSE 4096
 
-CMD [ "/usr/src/app/target/release/python_tool_executor" ]
+ENTRYPOINT [ "/usr/src/app/target/release/python_tool_executor" ]
