--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ string_calculator = "0.4.0"
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 reqwest = { version = "0.11.27", features = ["json"] }
 duckduckgo = "0.2.0"
+tokio = "1.49.0"
+async-std = "1.13.2"
 
 [lib]
 path = "src/lib.rs"
