--- a/proxima_backend_server/Cargo.toml
+++ b/proxima_backend_server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 actix-web = "4"
 proxima_backend = {path = ".."}
 openai = "1.1.0"
+openai-api-rs = "9.0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3.31"
