--- a/proxima_backend_server/Cargo.toml
+++ b/proxima_backend_server/Cargo.toml
@@ -12,3 +12,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3.31"
 reqwest-streams = "0.10.0"
+actix-files = "0.6.9"
+tokio = { version = "1.49.0", features = ["full"] }
+tokio-stream = "0.1.18"
